--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -42,8 +42,8 @@
 		    <style>
 				.plyr--video {
 					height: 30rem;
-					--plyr-color-main: var(--bs-primary);
-					--plyr-font-family: var(--bs-font-sans-serif);
+					--plyr-color-main: #2da5e5;
+					--plyr-font-family: Inter, tahoma, verdana, arial, helvetica, sans-serif;
 				}
 		    </style>
 		<script>
