--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -52,6 +52,13 @@
 				</em></li>
 			</ul>
 		</div>
+<div class="sidebar">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+<div class="content">
 	{% block precontent %}{% endblock %}
 	<div class="container">
 		{% block content %}{% endblock %}
@@ -65,5 +72,6 @@
 		</div>
 		</div>
 	</footer>
+</div>
 </body>
 </html>
