--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -31,7 +31,7 @@
 	</head>
 	<body>
 		
-			<div class="top bg-dark">
+			<div class="top bg-light">
 				<a href="../"><img class="picon" src="../assets/logo.png"/></a>
 				<ul class="menu left">
 					<li><a href="../" class="btn">{{ icon('circle', 16) }} Home</a></li>
