full width comment bar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -756,6 +756,11 @@ div.content {
   margin-top: -0.2em;
   vertical-align: middle;
 }
+
+#commentContents {
+width: 100%;
+}
+
 /// Gradients \\\
 @import "_gradients";
 /// Backgrounds \\\
