--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -559,6 +559,16 @@ form.reglog {
   text-align: right;
 }
 
+.float-left {
+  float: left;
+}
+.float-center {
+  float: center;
+}
+.float-right {
+  float: right;
+}
+
 .clear_right {
   clear: right;
 }
