--- a/templates/prototype/components/comment.twig
+++ b/templates/prototype/components/comment.twig
@@ -1,4 +1,4 @@
-<div class="grid" style="gap:0px">
+<div class="grid" style="gap:0px;margin-bottom: 17.5px;">
 	<div class="col-1">
 		<a href="user.php?name={{ data.u_name }}">
 			<img class="rounded" style="width:48px" src="{{ profile_image(data.u_name) }}">
