fix comment text box leaking

--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -87,20 +87,22 @@
 		</div>
 		<h3>Comments (redesign this later)</h3>
 		<div class="card">
-			<div class="card-body">
+			<div class="card-body-fat">
 				<div class="grid" style="gap:0px">
 					<div class="col-1">
 						<img class="rounded" style="width:48px" src="{{ profile_image(userdata.name) }}">
 					</div>
 					<div class="col-11">
+						<div style="background-color:red;">
 						<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
 						placeholder="{% if log %}{{ __("Enter comment here, Markdown can be used here.") }}{% else %}
 						{{ __("Please sign in in order to comment.") }}{% endif %}"></textarea>
+						</div>
 					</div>
 				</div>
 				<div class="grid">
 					<div class="col-offset-12">
-						<button id="{% if log %}post{% endif %}" class="button button-primary">{{ __("Comment") }}</button>
+						<button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
 					</div>
 				</div>
 			</div>
