--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -10,6 +10,10 @@
       <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
       <script src="assets/common-sbnext.js"></script>
+	<script>
+		subscribe_string = '{{ __("Subscribe") }}';
+		unsubscribe_string = '{{ __("Unsubscribe") }}';
+	</script>
       <style>
       </style>
       {% block customcss %}{% endblock %}
