--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -11,8 +11,8 @@
       <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
       <script src="assets/common-sbnext.js"></script>
 	<script>
-		subscribe_string = '{{ __("Subscribe") }}';
-		unsubscribe_string = '{{ __("Unsubscribe") }}';
+		subscribe_string = '{{ __("Follow") }}';
+		unsubscribe_string = '{{ __("Unfollow") }}';
 	</script>
       <style>
       </style>
