--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -22,7 +22,7 @@
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
 <h1>{{ video.title }}</h1>
-<button id="subscribe" class="button button-{% if subscribed %}secondary{% elseif userdata.id == video.author %}primary{% else %}warning{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unsubscribe") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Subscribe") }}{% endif %}</button>
+<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
 <div class="grid">
 	<div class="col-8">
 		<div id="container" style="height: 30rem;">
@@ -91,7 +91,7 @@
 			<div class="card-body-fat">
 				<div class="grid" style="gap:0px">
 					<div class="col-1">
-						<img class="rounded" style="width:48px" src="{{ profile_image(userdata.name) }}">
+						<img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
 					</div>
 					<div class="col-11">
 						<div style="background-color:red;">
