revamp uploader ui

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -700,6 +700,17 @@ input[type="color"]:focus,
   width: 100%;
   box-sizing: border-box;
 }
+
+.form-long {
+width: 100%;
+  box-sizing: border-box;
+}
+
+.uploader-form {
+margin-bottom: 0.5em;
+font-size: 1.05em;
+padding: 0.25em;
+}
 /* The side navigation menu */
 .sidebar {
   margin: 0;
