--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -26,6 +26,30 @@
 	}
 }
 
+// uploader "file selection" button, implemented in the hackiest way possible. fucking christ.
+input[type=file]::file-selector-button, {
+	border-radius: 3px;
+	color: black;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15) !important;
+	padding: 4px 7px;
+	margin: 2px 0;
+	margin-right: 7px;
+	display: inline-block;
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	cursor: pointer;
+	border: 1px solid darken($gray-500, 2.25%);
+	@include gradient-y($start-color: lighten($gray-400, 15%), $end-color: $gray-400);
+	font-family: Roboto, tahoma, verdana, arial, helvetica, sans-serif;
+
+	&:hover {
+		@include gradient-y($start-color: lighten($gray-400, 25%), $end-color: lighten($gray-400, 10%));
+	}
+	&.sel {
+		@include gradient-y($start-color: darken($gray-400, 7%), $end-color: darken($gray-400, 17%));
+	}
+}
+
 .button-large {
     padding: 11px 15px;
     border-radius: 5px;
