--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -1,5 +1,3 @@
-
-
 {% extends "_layout.twig" %}
 {% block head %}
 <meta name="title" content="{{ video.title }} - squareBracket">
@@ -22,7 +20,10 @@
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
 <h1>{{ video.title }}</h1>
+<div class="button-group">
+<a href="user.php?name={{ video.u_name }}" class="button button-secondary">{{ video.u_name }}</a>
 <button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+</div>
 <div class="grid">
 	<div class="col-8">
 		<div id="container" style="height: 30rem;">
@@ -46,7 +47,7 @@
 			.plyr--video {
 			height: 30rem;
 			--plyr-color-main: #2da5e5;
-			--plyr-font-family: Inter, tahoma, verdana, arial, helvetica, sans-serif;
+			--plyr-font-family: Roboto, tahoma, verdana, arial, helvetica, sans-serif;
 			}
 		</style>
 		<script>
@@ -75,12 +76,18 @@
 					<div class="col-4">
 						<h3 style="margin-top:0">Rate this video</h3>
 						<div>
-<a href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="text-{% if total_likes != 0 %}success{% else %}body{% endif %}"><svg class="bi" width="20" height="20" fill="currentColor">
-								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
-							</svg></a> <span id="likes">{{ total_likes }}</span>
-							<a href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" class="text-{% if total_dislikes != 0 %}danger{% else %}body{% endif %}"><svg class="bi" width="20" height="20" fill="currentColor">
-								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
-							</svg></a> <span id="dislikes" style="padding-right: 10px">{{ total_dislikes }}</span>
+							<a href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="text-{% if total_likes != 0 %}success{% else %}body{% endif %}">
+								<svg class="bi" width="20" height="20" fill="currentColor">
+									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
+								</svg>
+							</a>
+							<span id="likes">{{ total_likes }}</span>
+							<a href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" class="text-{% if total_dislikes != 0 %}danger{% else %}body{% endif %}">
+								<svg class="bi" width="20" height="20" fill="currentColor">
+									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
+								</svg>
+							</a>
+							<span id="dislikes" style="padding-right: 10px">{{ total_dislikes }}</span>
 						</div>
 					</div>
 				</div>
@@ -95,12 +102,12 @@
 					</div>
 					<div class="col-11">
 						<div>
-						<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
-						placeholder="{% if log %}
-						{{ __("Enter comment here, Markdown can be used here.") }}
-						{% else %}
-						{{ __("Please sign in in order to comment.") }}
-						{% endif %}"></textarea>
+							<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
+							placeholder="{% if log %}
+							{{ __("Enter comment here, Markdown can be used here.") }}
+							{% else %}
+							{{ __("Please sign in in order to comment.") }}
+							{% endif %}"></textarea>
 						</div>
 					</div>
 				</div>
