--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -19,7 +19,9 @@ $info: $cyan;
 $warning: $yellow;
 $danger: $red;
 $gray-100: #F8F8F8;
+$gray-150: #F1F1F1;
 $gray-200: #EEEEEE;
+$gray-250: #E8E8E8;
 $gray-300: #E2E2E2;
 $gray-400: #D3D3D3;
 $gray-500: #B4B4B4;
