--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -19,7 +19,7 @@
       {% block customcss %}{% endblock %}
    </head>
    <body>
-      <div class="top bg-light">
+      <div class="top">
          <a href="../"><img class="picon" src="../assets/logo.png"/></a>
          <ul class="menu left">
             <li><a href="../" class="btn">{{ icon('house-door', 16) }} Home</a></li>
