--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -47,7 +47,7 @@
 			.plyr--video {
 			height: 30rem;
 			--plyr-color-main: #2da5e5;
-			--plyr-font-family: Roboto, tahoma, verdana, arial, helvetica, sans-serif;
+			--plyr-font-family: arial, helvetica, sans-serif;
 			}
 		</style>
 		<script>
